# odinsource

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
src/: api.rs  cli.rs  document.rs  gui.rs  main.rs  tag.rs
