[package]
name = "odinsource"
version = "0.1.0"
edition = "2021"
default-run = "cli"

[[bin]]
name = "cli"
path = "src/main.rs"

[[bin]]
name = "gui"
path = "src/gui.rs"


[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.7", features = ["derive"] }
eframe = { version = "0.24.1", features = ["persistence"] }
egui_extras = { version = "0.24.2", features = ["all_loaders"] }
env_logger = "0.10.0"
log = "0.4.20"
serde = { version = "1.0.190", features = ["derive"] }
sqlx = { version = "0.7.2", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
toml = "0.8.6"
uuid = { version = "1.5.0", features = ["v4", "fast-rng"] }
